Bug #53217: adjust some usages of flex and gap for safari

--- a/base/univention-system-setup/usr/share/univention-system-setup/www/style.styl
+++ b/base/univention-system-setup/usr/share/univention-system-setup/www/style.styl
@@ -220,9 +220,10 @@
 		margin-right: var(--layout-spacing-unit)
 		cursor: pointer
 	.umcKeyContainer
-		display: flex
+		display: grid
+		grid-auto-flow: column
 		justify-content: center
-		grid-gap: var(--layout-spacing-unit)
+		gap: var(--layout-spacing-unit)
 		margin-top: var(--layout-spacing-unit-small)
 
 
