--- a/management/univention-web/css/GridTile.styl
+++ b/management/univention-web/css/GridTile.styl
@@ -43,7 +43,7 @@ $gridItemPadding = spacing(1)
 		grid-template-columns: auto 1fr
 		grid-template-rows: auto 1fr
 		grid-template-areas: "icon name" "icon description"
-		grid-gap: var(--layout-spacing-unit) @padding
+		gap: var(--layout-spacing-unit) @padding
 		cursor: pointer
 
 		&:hover
