--- a/management/univention-web/css/ProgressBar.styl
+++ b/management/univention-web/css/ProgressBar.styl
@@ -60,7 +60,7 @@
 .umc .umcProgressDetails
 	display: grid
 	grid-template-columns: auto 4ch
-	grid-gap: 0 spacing(1, true)
+	gap: 0 spacing(1, true)
 	margin-top: spacing(2)
 
 	.umcProgressPercentage
