--- a/management/univention-web/css/widgets/NotificationSnackbar.styl
+++ b/management/univention-web/css/widgets/NotificationSnackbar.styl
@@ -1,3 +1,4 @@
+@require "../variables.styl"
 @require "../HTMLElements.styl"
 
 
@@ -34,7 +35,7 @@
 
 .umcSnackbarNotificationMessage
 	display: grid
-	grid-gap: 0.5em
+	gap: spacing(1)
 	grid-template-columns: auto auto
 	grid-template-areas: "text close"
 
